--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -1,7 +1,7 @@
 .wrapper {
     --search-height: 46px;
     --search-border-radius: 92px;
-    --search-button-width:52px;
+    --search-button-width: 52px;
 
     width: 100%;
     height: var(--default-layout-header-hieght, 60px);
@@ -27,8 +27,12 @@
 .logo {
 }
 
-.search {
+.search,
+.search-result {
     width: 361px;
+}
+
+.search {
     height: var(--search-height);
     background: rgba(22, 24, 35, 0.06);
     border-radius: var(--search-border-radius);
@@ -46,10 +50,9 @@
         caret-color: var(--primary);
     }
 
-    input:not(:placeholder-shown)~.search-btn{
+    input:not(:placeholder-shown) ~ .search-btn {
         color: rgba(22, 24, 35, 0.75);
-        }
-
+    }
 
     &::after {
         content: '';
@@ -62,19 +65,28 @@
         background-color: rgba(22, 24, 35, 0.12);
     }
     &:focus-within {
-        border-color:  rgba(22, 24, 35, 0.2);
+        border-color: rgba(22, 24, 35, 0.2);
     }
 }
 
-.clear ,
 
+.search-result{
+}
 
+.search-title{
+    padding: 5px 12px;
+    color: rgb(22, 24, 35, 0.5);
+    font-size: 1.4rem;
+    font-weight: 600;
+}
+
+.clear,
 .loading {
-position: absolute;
-right:calc(var(--search-button-width) + 16px);
-top: 50%;
-transform: translateY(-50%);
-color: rgba(22, 24, 35, 0.34);;
+    position: absolute;
+    right: calc(var(--search-button-width) + 16px);
+    top: 50%;
+    transform: translateY(-50%);
+    color: rgba(22, 24, 35, 0.34);
 }
 
 .search-btn {
@@ -89,7 +101,7 @@ color: rgba(22, 24, 35, 0.34);;
         background: rgba(22, 24, 35, 0.03);
         cursor: pointer;
     }
-    &:active{
-        background-color: rgba(22, 24, 35, .06);
+    &:active {
+        background-color: rgba(22, 24, 35, 0.06);
     }
 }
