--- a/src/components/Buton/Button.module.scss
+++ b/src/components/Buton/Button.module.scss
@@ -26,6 +26,12 @@
     margin-left: 8px;
 
 }
+
+.icon {
+    display: inline-block;
+    width: 24px;
+    text-align: center;
+}
 //button types
 .rounded {
     border-radius: 999px; //tips set up btn bo tron 2 canh ben
